Fix support form alignment

--- a/packages/replay-next/components/errors/SupportForm.module.css
+++ b/packages/replay-next/components/errors/SupportForm.module.css
@@ -61,3 +61,7 @@
 .SubmitButton:hover {
   background-color: var(--primary-accent-hover);
 }
+
+.ConfirmationMessage {
+  text-align: center;
+}
